--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   text-align: center;
 }
 
-.logo {
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -41,4 +41,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
